# flask_individual

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py
configs/: mongo.conf.yml  service.conf.py
server/: __init__.py  api.py  app.py  auth.py  db.py  models.py  schemas.py  sockets.py  utils.py
server/api/: __init__.py  agreement_api.py  approval_api.py  auth_api.py  chat_api.py  company_api.py  constants.py  invite_api.py  signature_api.py  user_api.py  utils.py
server/db/: __init__.py  agreement.py  approval.py  company.py  constants.py  db.py  invite.py  message.py  signature.py  user.py
templates/: package-lock.json  package.json
templates/src/: App.js
templates/src/api/: AgreementService.js  ApprovalService.js  AuthService.js  AuthSevice.js  ChatService.js  CompanyService.js  InviteService.js  SignatureService.js  UserService.js  index.js
templates/src/components/Agreement/: Chat.js  Companies.js  Company.js  Editor.js  InviteDialog.js  Stage.js  index.js
templates/src/components/Editor/: Editor.js
templates/src/components/agreement-list/: Agreement.js  AgreementList.js
templates/src/components/company/: AddEmployeeDialog.js  Company.js  ErrorDialog.js  User.js
templates/src/components/header/: AgreenentDialog.js  Header.js  MenuList.js
templates/src/components/invite-list/: Invite.js  InviteList.js
templates/src/components/invites/: Invite.js
templates/src/components/login/: Login.js
templates/src/components/private-route/: PrivateRoute.js
templates/src/constants/: index.js
