[tool.poetry]
name = "individual"
version = "0.1.0"
description = ""
authors = ["gun73r <alexander.kulakousky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
pymongo = "^3.11.3"
marshmallow = "^3.10.0"
PyYAML = "^5.4.1"
python-dotenv = "^0.15.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
